# OPD

./: .gitignore
data/: SFMLpath.txt  cmdList.txt  link.txt
lw1/: ab  ab.cpp  abc  abc.cpp  hello  hello_error.cpp  hello_name.cpp  linear_equation  linear_equation.cpp  linear_equation_float  linear_equation_float.cpp  square_equation  square_equation.cpp
sfml.1/01/: main.cpp
sfml.1/02/: CMakeLists.txt
sfml.1/03/: CMakeLists.txt  main.cpp
sfml.1/sfml1.2/00/: main.cpp
sfml.1/sfml1.3/00/: CMakeLists.txt  main.cpp
sfml.2/00/: main.cpp
sfml.2/01/: CMakeLists.txt  main.cpp
sfml.2/02/: CMakeLists.txt
sfml.2/03/: CMakeLists.txt
sfml.2/sfml2.1/: CMakeLists.txt  main.cpp
sfml.2/sfml2.2/: CMakeLists.txt  main.cpp
sfml1.2/00/: CMakeLists.txt  main.cpp
sfml1/01/: CMakeLists.txt  main.cpp
sfml1/02/: main.cpp
sfml1/sfml1.1/00/: main.cpp
sfml2/03/: main.cpp
sfml2/sfml2.2/: main.cpp
sfml3/: CMakeLists.txt  CmakeLists.txt
sfml3/00/: CMakeLists.txt  CmakeLists.txt  main.cpp
sfml3/01/: CMakeLists.txt  main.cpp
sfml3/02/: CMakeLists.txt  main.cpp
sfml3/03/: CMakeLists.txt  main.cpp
sfml3/04/: CMakeLists.txt  main.cpp
sfml3/sfml3.1/: CMakeLists.txt  main.cpp
sfml3/sfml3.2/: main.cpp
sfml3/sfml3.3/: main.cpp
workshop1.1/: main.cpp
workshop1/workshop1.1/: CMakeLists.txt  main.cpp
workshop1/workshop1.2/: main.cpp
workshop1/workshop1.3/: main.cpp
workshop1/workshop1.4/: CMakeLists.txt  main.cpp
workshop2/workshop2.1/: CMakeLists.txt  main.cpp
workshop2/workshop2.2/: main.cpp
workshop2/workshop2.3/: main.cpp
workshop2/workshop2.5/: main.cpp
workshop2/workshop2.6/: main.cpp
workshop2/workshop2.7/: main.cpp
workshop2/workshop2.8/: main.cpp
workshop3/example/: print.h
workshop3/example/classFlag/: CMakeLists.txt  RussianFlag.cpp  RussianFlag.h  main.cpp
workshop3/example/multiFile/: CMakeLists.txt  main.cpp  print.cpp
workshop3/workshop3.1/: CMakeLists.txt  main.cpp
